# ploston-enterprise

./: .gitignore  Dockerfile  Makefile  README.md  docker-entrypoint.sh  pyproject.toml
.github/workflows/: build-rc.yml  ci.yml  publish.yml
src/ploston_enterprise/: __init__.py  __main__.py  capabilities.py  defaults.py  server.py
src/ploston_enterprise/license/: __init__.py  models.py  validator.py
src/ploston_enterprise/plugins/: __init__.py  patterns.py  policy.py  synthesis.py
tests/integration/: test_server_smoke.py
tests/unit/: test_defaults.py
